--- a/index.html
+++ b/index.html
@@ -125,10 +125,6 @@
     <!-- !PAGE CONTENT! -->
     <div class="w3-main" style="margin-left:340px;margin-right:40px">
 
-        <input type="text" name="subject" placeholder="Subject" />
-        <textarea name="text" placeholder="Message"></textarea>
-        <button id="js_send" onclick="js_send()">Send</button>
-
         <!-- Header -->
         <div class="w3-container" style="margin-top:0px" id="showcase">
             <img src="images/principal4.jpg" style="width:100%">
@@ -301,10 +297,10 @@
                     <label>Mensagem</label>
                     <input class="w3-input w3-border" type="text" name="Message" required>
                 </div>
-                <button class="w3-button w3-block w3-padding-large w3-blue w3-margin-bottom" onclick="sendEmail()">Enviar Mensagem</button>
+                <button class="w3-button w3-block w3-padding-large w3-blue w3-margin-bottom" onclick="js_send()">Enviar Mensagem</button>
             </form>
         </div>
-
+        
         <!-- Nodal -->
         <div id="id01" class="w3-modal">
             <div class="w3-modal-content w3-card-4 w3-animate-zoom" style="max-width:600px">
