--- a/index.html
+++ b/index.html
@@ -277,8 +277,7 @@
                 <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> Av. 25 de Abril 29, 1675-155 Lisboa</p>
                 <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Telefone: +351 214 782 497</p>
                 <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: easydente@gmail.com</p>
-                <p><a href="https://www.facebook.com/EasyDente-109066661716111" target="_blank"><i class="fa fa-facebook-square fa-fw w3-xxlarge w3-margin-right"></i>Siga-nos no facebook</a></p>
-
+                <p><a href="https://www.facebook.com/EasyDente-109066661716111" target="_blank"><i class="fa fa-facebook-square fa-fw w3-xxlarge w3-margin-right"></i>Siga-nos através do facebook</a></p>
             </div>
 
             <br>
