--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 
             <br>
 
-            <p>Quer que estilizemos sua casa? Preencha o formulário e me preencha com os detalhes :) Adoramos conhecer novas pessoas!</p>
+            <p>Para enviar uma mensagem, fazer uma crítica ou tirar dúvidas, utilize o formulário abaixo, iremos responder o mais breve possível.</p>
             <form target="_blank">
                 <div class="w3-section">
                     <label>Nome</label>
