--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </div>
         <div class="w3-bar-block">
             <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a>
-            <a href="#showcase" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Apresentação</a>
+            <a href="#showcase" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">A Clínica</a>
             <a href="#services" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Serviços</a>
             <a href="#designers" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Equipa</a>
             <a href="#packages" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Planos</a>
@@ -136,7 +136,7 @@
                     <p><button onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-yellow w3-round">Marcação Online</button></p>
                 </div>
             </div>
-            <h1 class="w3-xxxlarge w3-text-blue"><b>Apresentação.</b></h1>
+            <h1 class="w3-xxxlarge w3-text-blue"><b>A Clínica.</b></h1>
             <hr style="width:50px;border:5px solid blue" class="w3-round">
         </div>
 
