--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@
             <div class="w3-section">
                 <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> Av. 25 de Abril 29, 1675-155 Lisboa</p>
                 <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Telefone: +351 214 782 497</p>
+                <p><i class="fa fa-mobile fa-fw w3-xxlarge w3-margin-right"></i> Telemóvel: +351 967 211 527; 912 424 676</p>
                 <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: easydente@gmail.com</p>
                 <p><a href="https://www.facebook.com/EasyDente-109066661716111" target="_blank"><i class="fa fa-facebook-square fa-fw w3-xxlarge w3-margin-right"></i>Siga-nos através do facebook</a></p>
             </div>
